force-app/main/default/objects/numm__Import_Ecritures_banques__c/numm__Import_Ecritures_banques__c.object-meta.xml
<CustomObject>
    <label>Import Ecritures banques</label>
    <nameField>
        <displayFormat>IMP-ECRBQ-{0000000}</displayFormat>
        <label>Nom de Import Ecritures banques</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imports Ecritures banques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>