force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Banque__c.field-meta.xml
<CustomField>
    <fullName>numm__Banque__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banque</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__IdctrlAccounting__r.numm__TypeDeCollectif__c</field>
            <operation>equals</operation>
            <value>BAN</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Import Ecritures banques</relationshipLabel>
    <relationshipName>Import_Ecritures_banques</relationshipName>
    <type>Lookup</type>
</CustomField>