force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__CatJourn__c.field-meta.xml
<CustomField>
    <fullName>numm__CatJourn__c</fullName>
    <label>Catégorie de journal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Achat</fullName>
            </value>
            <value>
                <fullName>Opération Diverse</fullName>
            </value>
            <value>
                <fullName>Vente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>