force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Collectif__c.field-meta.xml
<CustomField>
    <fullName>numm__Collectif__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collectif</label>
    <referenceTo>numm__CtrlAccounting__c</referenceTo>
    <relationshipLabel>Imports Ecritures banques</relationshipLabel>
    <relationshipName>Imports_Ecritures_banques</relationshipName>
    <type>Lookup</type>
</CustomField>