force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Commentaire__c.field-meta.xml
<CustomField>
    <fullName>numm__Commentaire__c</fullName>
    <label>Commentaire</label>
    <length>100</length>
    <type>Text</type>
</CustomField>