force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Credit_Piece__c.field-meta.xml
<CustomField>
    <fullName>numm__Credit_Piece__c</fullName>
    <label>Crédit Pièce</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>