force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Date_de_piece__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_de_piece__c</fullName>
    <label>Date de pièce</label>
    <type>Date</type>
</CustomField>