force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Date_de_Traitement__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_de_Traitement__c</fullName>
    <label>Date de Traitement</label>
    <type>Date</type>
</CustomField>