force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Debit_Piece__c.field-meta.xml
<CustomField>
    <fullName>numm__Debit_Piece__c</fullName>
    <label>Débit Pièce</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>