force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Devise__c.field-meta.xml
<CustomField>
    <fullName>numm__Devise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devise</label>
    <referenceTo>numm__currency__c</referenceTo>
    <relationshipLabel>Import Ecritures banques</relationshipLabel>
    <relationshipName>Import_Ecritures_banques</relationshipName>
    <type>Lookup</type>
</CustomField>