force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Erreur__c.field-meta.xml
<CustomField>
    <fullName>numm__Erreur__c</fullName>
    <label>Erreur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>