force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Etablissement__c.field-meta.xml
<CustomField>
    <fullName>numm__Etablissement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Etablissement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__Establishment__c.numm__Entity__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Entite__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipLabel>Import Ecritures banques</relationshipLabel>
    <relationshipName>Import_Ecritures_banques</relationshipName>
    <type>Lookup</type>
</CustomField>