force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Etat__c.field-meta.xml
<CustomField>
    <fullName>numm__Etat__c</fullName>
    <label>Etat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complète</fullName>
            </value>
            <value>
                <fullName>A modifier</fullName>
                <default>true</default>
                <label>A modifier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>