force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__FraisB__c.field-meta.xml
<CustomField>
    <fullName>numm__FraisB__c</fullName>
    <label>Frais Bancaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>