force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Iban__c.field-meta.xml
<CustomField>
    <fullName>numm__Iban__c</fullName>
    <label>Iban</label>
    <length>34</length>
    <type>Text</type>
</CustomField>