force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Libelle3__c.field-meta.xml
<CustomField>
    <fullName>numm__Libelle3__c</fullName>
    <label>Libellé 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>