force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Libelle4__c.field-meta.xml
<CustomField>
    <fullName>numm__Libelle4__c</fullName>
    <label>Libellé 4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>