force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Montant__c.field-meta.xml
<CustomField>
    <fullName>numm__Montant__c</fullName>
    <inlineHelpText>Lorsque le fichier ne contient pas de colonne débit et de colonne crédit</inlineHelpText>
    <label>Montant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>