force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Numero_de_Piece__c.field-meta.xml
<CustomField>
    <fullName>numm__Numero_de_Piece__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Numéro de Pièce</label>
    <referenceTo>numm__HeaderVoucher__c</referenceTo>
    <relationshipLabel>Import Ecritures banques</relationshipLabel>
    <relationshipName>Import_Ecritures_banques</relationshipName>
    <type>Lookup</type>
</CustomField>