force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__PieceOrigine__c.field-meta.xml
<CustomField>
    <fullName>numm__PieceOrigine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pièce origine</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__HeaderVoucher__c.numm__Etablissement__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Etablissement__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__HeaderVoucher__c</referenceTo>
    <relationshipLabel>Imports Ecritures banques (Pièce origine)</relationshipLabel>
    <relationshipName>Imports_Ecritures_banques</relationshipName>
    <type>Lookup</type>
</CustomField>