force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Reference__c.field-meta.xml
<CustomField>
    <fullName>numm__Reference__c</fullName>
    <label>Référence</label>
    <length>50</length>
    <type>Text</type>
</CustomField>