force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__RoleJournal__c.field-meta.xml
<CustomField>
    <fullName>numm__RoleJournal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal de banque</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__Journal_Role__c.numm__Etablissement__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Etablissement__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Journal_Role__c</referenceTo>
    <relationshipLabel>Import Ecritures banques</relationshipLabel>
    <relationshipName>Import_Ecritures_banques</relationshipName>
    <type>Lookup</type>
</CustomField>