force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Schema_ecriture__c.field-meta.xml
<CustomField>
    <fullName>numm__Schema_ecriture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schéma d&#39;écriture</label>
    <referenceTo>numm__Schema_Ecriture__c</referenceTo>
    <relationshipLabel>Import Ecritures banques</relationshipLabel>
    <relationshipName>Import_Ecritures_banques</relationshipName>
    <type>Lookup</type>
</CustomField>