force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Statut__c.field-meta.xml
<CustomField>
    <fullName>numm__Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A traiter</fullName>
                <default>true</default>
                <label>A traiter</label>
            </value>
            <value>
                <fullName>Traité</fullName>
            </value>
            <value>
                <fullName>Marqué comme Traité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>