force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Taux__c.field-meta.xml
<CustomField>
    <fullName>numm__Taux__c</fullName>
    <label>Taux</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>