force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Tiers__c.field-meta.xml
<CustomField>
    <fullName>numm__Tiers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tiers</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.numm__Entite__c</field>
            <operation>equals</operation>
            <valueField>numm__ThirdPartyRule__c.numm__Entite__c</valueField>
        </filterItems>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__IdctrlAccounting__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Collectif__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Import Ecritures banques (Tiers)</relationshipLabel>
    <relationshipName>Import_Ecritures_banques1</relationshipName>
    <type>Lookup</type>
</CustomField>