force-app/main/default/objects/numm__Import_Ecritures_banques__c/fields/numm__Type_operation__c.field-meta.xml
<CustomField>
    <fullName>numm__Type_operation__c</fullName>
    <label>Type d&#39;opération</label>
    <length>100</length>
    <type>Text</type>
</CustomField>