force-app/main/default/objects/numm__Import_Ecritures_banques__c/listViews/numm__A_traiter.listView-meta.xml
<ListView>
    <fullName>numm__A_traiter</fullName>
    <columns>NAME</columns>
    <columns>numm__Date_de_piece__c</columns>
    <columns>numm__Entite__c</columns>
    <columns>numm__Banque__c</columns>
    <columns>numm__Libelle__c</columns>
    <columns>numm__Libelle2__c</columns>
    <columns>numm__Montant__c</columns>
    <columns>numm__Debit_Piece__c</columns>
    <columns>numm__Credit_Piece__c</columns>
    <columns>numm__Reference__c</columns>
    <columns>numm__Type_operation__c</columns>
    <columns>numm__Libelle3__c</columns>
    <columns>numm__Libelle4__c</columns>
    <columns>numm__Schema_ecriture__c</columns>
    <columns>numm__Etat__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>numm__Statut__c</field>
        <operation>equals</operation>
        <value>A traiter</value>
    </filters>
    <label>A traiter</label>
    <language>fr</language>
</ListView>